--- a/HRStore/views/supplier_updateInfo.xml
+++ b/HRStore/views/supplier_updateInfo.xml
@@ -247,7 +247,7 @@
                             <!-- Edit Personal Info -->
                             <div class="widget personal-info">
                                 <h3 class="widget-header user">修改个人信息</h3>
-                                <form action="supplier_updateDetailed">
+                                <form action="supplier_updateDetailed" method="post">
                                     <!-- Name -->
                                     <div class="form-group">
                                         <label for="shopname">商户名</label>
@@ -279,6 +279,8 @@
                                     <!-- Submit button -->
                                     <input type="hidden" name="user_id"
                                            t-att-value="user_id"/>
+                                    <input type="hidden" name="csrf_token"
+                                                           t-att-value="request.csrf_token()"/>
                                     <button class="btn btn-transparent">保存</button>
                                 </form>
                             </div>
@@ -308,6 +310,8 @@
                                     <!-- Submit Button -->
                                     <input type="hidden" name="user_id"
                                            t-att-value="user_id"/>
+                                    <input type="hidden" name="csrf_token"
+                                                           t-att-value="request.csrf_token()"/>
                                     <button class="btn btn-transparent">保存</button>
                                 </form>
                             </div>
