--- a/HRStore/views/supplier_changeStatus.xml
+++ b/HRStore/views/supplier_changeStatus.xml
@@ -298,10 +298,12 @@
                                                 <span id="date" class="categories" t-esc="p[0]"></span>
                                             </td>
                                             <td>
-                                                <form action="/deleteProduct">
+                                                <form action="/deleteProduct" method="post">
                                                     <input name="pro_id" type="hidden" t-att-value="p[1].id"/>
                                                     <input type="hidden" name="user_id"
                                                        t-att-value="user_id"/>
+                                                    <input type="hidden" name="csrf_token"
+                                                           t-att-value="request.csrf_token()"/>
                                                     <button class="btn btn-outline-danger btn-sm">删除</button>
                                                 </form>
                                             </td>
