--- a/HRStore/views/customer_order.xml
+++ b/HRStore/views/customer_order.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <odoo>
-<!--页面  李甜甜 计科162 161002229   实现 陈婉菁 计科162 161002218-->
+    <!--页面  李甜甜 计科162 161002229   实现 陈婉菁 计科162 161002218-->
     <template id="customer_order" name="customer_order">
         <head>
             <t t-call-assets="HRStore.my_custom_assets" tjs="false"/>
@@ -12,7 +12,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-12">
-                             <nav class="navbar navbar-expand-lg  navigation">
+                            <nav class="navbar navbar-expand-lg  navigation">
                                 <a class="navbar-brand" href="/home">
                                     <img src="/HRStore/static/src/images/logo.jpg" height="100" width="220"/>
                                 </a>
@@ -173,26 +173,28 @@
                                 <div class="widget user-dashboard-menu">
                                     <ul>
                                         <li>
-                                             <form action="/cart" method="post">
+                                            <form action="/cart" method="post">
                                                 <input type="hidden" name="csrf_token"
                                                        t-att-value="request.csrf_token()"/>
                                                 <input type="hidden" name="user_id"
                                                        t-att-value="user_id"/>
                                                 <button class="btn btn-link" style="color:black;"
-                                                        type="submit"><i class="fa fa-user"></i>
-                                                购物车
+                                                        type="submit">
+                                                    <i class="fa fa-user"></i>
+                                                    购物车
                                                 </button>
                                             </form>
                                         </li>
-                                        <li  class="active">
+                                        <li class="active">
                                             <form action="/order" method="post">
                                                 <input type="hidden" name="csrf_token"
                                                        t-att-value="request.csrf_token()"/>
                                                 <input type="hidden" name="user_id"
                                                        t-att-value="user_id"/>
                                                 <button class="btn btn-link"
-                                                        type="submit"><i class="fa fa-user"></i>
-                                                订单
+                                                        type="submit">
+                                                    <i class="fa fa-user"></i>
+                                                    订单
                                                 </button>
                                             </form>
                                         </li>
@@ -203,8 +205,9 @@
                                                 <input type="hidden" name="user_id"
                                                        t-att-value="user_id"/>
                                                 <button class="btn btn-link" style="color:black;"
-                                                        type="submit"><i class="fa fa-cog"></i>
-                                                退出登录
+                                                        type="submit">
+                                                    <i class="fa fa-cog"></i>
+                                                    退出登录
                                                 </button>
                                             </form>
                                         </li>
@@ -236,7 +239,9 @@
                                                         <span t-field="one_order[0].pro_image"
                                                               t-options="{'widget': 'image', 'class': 'mx-auto d-block img-thumbnail'}"/>
                                                     </td>
-                                                    <td><span></span></td>
+                                                    <td>
+                                                        <span></span>
+                                                    </td>
                                                     <td>
                                                         <h3 class="title">
                                                             <span t-esc="one_order[0].pro_name"
@@ -248,18 +253,18 @@
                                                         </span>
                                                         <br/>
                                                         <span id="price">
-                                                            <span>价格: </span>
-                                                                <label t-esc="one_order[0].pro_price"></label>
+                                                            <span>价格:</span>
+                                                            <label t-esc="one_order[0].pro_price"></label>
                                                         </span>
                                                         <br/>
                                                         <span id="total_price">
-                                                            <span>总价: </span>
-                                                                <label t-esc="one_order[2].order_price"></label>
+                                                            <span>总价:</span>
+                                                            <label t-esc="one_order[2].order_price"></label>
                                                         </span>
                                                         <br/>
                                                         <span id="time">
-                                                            <span>时间: </span>
-                                                                <label t-esc="one_order[5]"></label>
+                                                            <span>时间:</span>
+                                                            <label t-esc="one_order[5]"></label>
                                                         </span>
                                                     </td>
                                                     <td>
@@ -267,20 +272,35 @@
                                                     </td>
                                                     <td>
                                                         <center>
-                                                            <form action="/comment" method="post">
-                                                                <input type="hidden" name="csrf_token"
-                                                                       t-att-value="request.csrf_token()"/>
-                                                                <input name="user_id" type="hidden"
-                                                                       t-att-value="user_info.user_id"/>
-                                                                <input name="order_id" type="hidden"
-                                                                       t-att-value="one_order[2].id"/>
+                                                            <t t-if="one_order[3]=='已完成'">
+                                                                <form action="/comment" method="post">
+                                                                    <input type="hidden" name="csrf_token"
+                                                                           t-att-value="request.csrf_token()"/>
+                                                                    <input name="user_id" type="hidden"
+                                                                           t-att-value="user_info.user_id"/>
+                                                                    <input name="order_id" type="hidden"
+                                                                           t-att-value="one_order[2].id"/>
+                                                                    <button class="btn btn-link" style="width:30px">评价
+                                                                    </button>
+                                                                </form>
+                                                            </t>
+                                                            <t t-if="one_order[3]=='待付款'">
+                                                                <form action="/submit_order" method="post">
+                                                                    <input type="hidden" name="csrf_token"
+                                                                           t-att-value="request.csrf_token()"/>
+                                                                    <input name="user_id" type="hidden"
+                                                                           t-att-value="user_info.user_id"/>
+                                                                    <input name="order_id" type="hidden"
+                                                                           t-att-value="one_order[2].id"/>
+                                                                    <input name="type_flag" type="hidden"
+                                                                           t-att-value="1"/>
+                                                                    <button class="btn btn-outline-success btn-sm">
+                                                                        付款
+                                                                    </button>
+                                                                </form>
+                                                            </t>
 
-                                                                 <t t-if="one_order[3]=='已完成'">
-                                                                    <button class="btn btn-link" style="width:30px">评价</button>
-                                                                </t>
 
-
-                                                            </form>
                                                         </center>
                                                     </td>
                                                     <td class="action" data-title="Action">
