--- a/HRStore/views/customer_info.xml
+++ b/HRStore/views/customer_info.xml
@@ -37,7 +37,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-12">
-                             <nav class="navbar navbar-expand-lg  navigation">
+                            <nav class="navbar navbar-expand-lg  navigation">
                                 <a class="navbar-brand" href="/home">
                                     <img src="/HRStore/static/src/images/logo.jpg" height="100" width="220"/>
                                 </a>
@@ -205,14 +205,15 @@
                                 <div class="widget user-dashboard-menu">
                                     <ul>
                                         <li class="active">
-                                             <form action="/cart" method="post">
+                                            <form action="/cart" method="post">
                                                 <input type="hidden" name="csrf_token"
                                                        t-att-value="request.csrf_token()"/>
                                                 <input type="hidden" name="user_id"
                                                        t-att-value="user_id"/>
                                                 <button class="btn btn-link"
-                                                        type="submit"><i class="fa fa-user"></i>
-                                                购物车
+                                                        type="submit">
+                                                    <i class="fa fa-user"></i>
+                                                    购物车
                                                 </button>
                                             </form>
                                         </li>
@@ -223,8 +224,9 @@
                                                 <input type="hidden" name="user_id"
                                                        t-att-value="user_id"/>
                                                 <button class="btn btn-link" style="color:black;"
-                                                        type="submit"><i class="fa fa-user"></i>
-                                                订单
+                                                        type="submit">
+                                                    <i class="fa fa-user"></i>
+                                                    订单
                                                 </button>
                                             </form>
                                         </li>
@@ -235,8 +237,9 @@
                                                 <input type="hidden" name="user_id"
                                                        t-att-value="user_id"/>
                                                 <button class="btn btn-link" style="color:black;"
-                                                        type="submit"><i class="fa fa-cog"></i>
-                                                退出登录
+                                                        type="submit">
+                                                    <i class="fa fa-cog"></i>
+                                                    退出登录
                                                 </button>
                                             </form>
                                         </li>
@@ -260,6 +263,8 @@
                                             <th></th>
                                             <th>商品</th>
                                             <th>数量</th>
+                                            <th></th>
+                                            <th></th>
                                             <th></th>
                                             <th></th>
                                         </tr>
@@ -306,8 +311,11 @@
                                                                    t-att-value="cart_product[1]"
                                                                    style="width:50px;text-align:center;height:22px;"/>
                                                         </td>
-                                                        <td text="center">
-                                                            <center>
+                                                        <td>
+                                                            <span></span>
+                                                        </td>
+                                                        <td >
+
                                                                 <input type="hidden" name="csrf_token"
                                                                        t-att-value="request.csrf_token()"/>
                                                                 <input name="user_id" type="hidden"
@@ -319,9 +327,12 @@
                                                                 <button class="btn btn-outline-success btn-sm">购买
                                                                 </button>
 
-                                                            </center>
+
                                                         </td>
                                                     </form>
+                                                     <td>
+                                                        <span></span>
+                                                    </td>
                                                     <td>
                                                         <form action="/cart_product_delete" method="post">
                                                             <!--<a class="delete" href="/cart_product_delete">-->
